[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=63",
  "wheel",
  "setuptools-scm"
]

[project]
authors = [
  {name = "Raul Viera-Mercado", email = "vieramercado1@llnl.gov"},
  {name = "Keehoon Kim", email = "kim48@llnl.gov"},
]
#license = "BSD-Commercial"
license-files = ["LICEN[CS]E*"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
  "pyyaml ~= 6.0",
  "herbie-data ~= 2026.1.1",
  "pygmt ~= 0.18.0",
  "matplotlib ~= 3.10.8",
  "prettytable ~= 3.11",
  "scipy ~= 1.17.1",
]

name = "apbuilder"
description = "Atmospheric Profile Builder (APBuilder)"
dynamic = ["version"]
keywords = [
  "atmosphere",  
  "climate",
  "forecast",
  "grib2",
  "models",  
  "weather",
]
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["build", "virtualenv", "setuptools-scm"]
docs = [
  "mkdocs ~= 1.6.0",
  "mkdocstrings[python] ~= 0.25.1",
  "mkdocs-print-site-plugin ~= 2.8"
]
test = [
  "pytest ~= 9.0.2",
  "pytest-cov ~= 7.0.0",
  "Pillow ~= 12.1.1"
]

[project.scripts]
apbuilder = "apbuilder.main:run_apb"

[project.urls]
Changelog = "https://github.com/llnl/apbuilder/blob/main/CHANGELOG.md"
Documentation = "https://software.llnl.gov/APBuilder/"
Homepage = "https://github.com/llnl/apbuilder"
Releases = "https://github.com/llnl/apbuilder/releases"
Repository = "https://github.com/llnl/apbuilder"

[tool.setuptools.packages.find]
where = ["src", "config" ]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]
version_file = "src/apbuilder/_version.py"
local_scheme = "no-local-version"

[tool.coverage.run]
omit = ['*\_version.py']
source = ['src']

[tool.pytest.ini_options]
testpaths = [
    "tests/unit",
    "tests/integration/test_local_integration.py"
]
addopts = """
  --cov=src
  --junitxml=coverage-reports/report.xml
  --cov-report term-missing
  --cov-report html:coverage-reports/htmlcov/
  --cov-report xml:coverage-reports/coverage.xml
"""
